--- a/pages/vr.html
+++ b/pages/vr.html
@@ -37,17 +37,16 @@
 			<div class="media">
 				<div class="videos">
 					<div class="videos__video videos__video--full-width">
+						<div id=vrview></div>
+					</div>
+					<!-- <div class="videos__video videos__video--half-width">
 						<div class="loading-icon loading-icon--yellow"></div>
 						<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 					</div>
 					<div class="videos__video videos__video--half-width">
 						<div class="loading-icon loading-icon--yellow"></div>
 						<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
-					</div>
-					<div class="videos__video videos__video--half-width">
-						<div class="loading-icon loading-icon--yellow"></div>
-						<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
-					</div>
+					</div> -->
 				</div>
 			</div>
 			<div class="icons icons--light">
@@ -68,5 +67,6 @@
 			</div>
 		</div>	
 	</main>
+	<script src="../scripts/vr.js"></script>
 </body>
 </html>
