--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-animate.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script><script src="https://apis.google.com/js/api.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script>
+	<script src="https://apis.google.com/js/api.js"></script>
+	<script src="//storage.googleapis.com/vrview/2.0/build/vrview.min.js"></script>
 	<script src="scripts/angular.js"></script>
 	<script src="scripts/script.js"></script>
 </head>
@@ -14,5 +16,6 @@
 	<div class="animation-container">
 		<div class="fade-animation" ng-view></div>
 	</div>
+	
 </body>
 </html>
