--- a/pages/contact.html
+++ b/pages/contact.html
@@ -48,6 +48,18 @@
 					<div class="contact-form__submit" ng-click="sendEmail()">SUBMIT</div>
 				</form>
 			</div>
+			<div class="icons icons--light icons--contact">
+				<div class="icons__icon" ng-click="go('/partners')">
+					<div class="icons__image icons__image--back icons__image--back--light"></div>
+				</div>
+				<div class="icons__icon" ng-click="go('/')">
+					<div class="icons__image icons__image--home icons__image--home--light"></div>
+					<div class="icons__text">Home</div>
+				</div>
+				<div class="icons__icon" ng-click="go('/what')">
+					<div class="icons__image icons__image--forward icons__image--forward--light"></div>
+				</div>
+			</div>
 		</div>	
 	</main>
 </body>
