--- a/pages/partners.html
+++ b/pages/partners.html
@@ -45,6 +45,18 @@
 						</div>
 					</div>
 				</div>
+				<div class="icons">
+					<div class="icons__icon" ng-click="go('/how')">
+						<div class="icons__image icons__image--back"></div>
+					</div>
+					<div class="icons__icon" ng-click="go('/')">
+						<div class="icons__image icons__image--home"></div>
+						<div class="icons__text">Home</div>
+					</div>
+					<div class="icons__icon" ng-click="go('/contact')">
+						<div class="icons__image icons__image--forward"></div>
+					</div>
+				</div>
 		</div>
 	</main>
 	<footer>
