--- a/pages/home.html
+++ b/pages/home.html
@@ -18,7 +18,7 @@
 			<li class="nav-top__menu-item" ng-click="go('/contact')">Contact</li>
 			</ul>
 			<div class="nav-top__logo nav-top__logo--light" ng-click="go('/')"></div>
-			<div class="nav-top__burger-icon">
+			<div class="nav-top__burger-icon" ng-click="show_header_menu = !show_header_menu" ng-class="show_header_menu ? 'nav-top__burger-icon nav-top__burger-icon--active' : 'nav-top__burger-icon'">
 				<span></span>
 				<span></span>
 				<span></span>
@@ -27,6 +27,13 @@
 		</div>
 	</header>
 	<main>
+		<div class="mobile-nav-menu" ng-show="show_header_menu">
+			<div class="mobile-nav-menu__item" ng-click="go('/what')">What</div>
+			<div class="mobile-nav-menu__item" ng-click="go('/who')">Who</div>
+			<div class="mobile-nav-menu__item" ng-click="go('/how')">How</div>
+			<div class="mobile-nav-menu__item" ng-click="go('/partners')">Partners</div>
+			<div class="mobile-nav-menu__item" ng-click="go('/contact')">Contact</div>
+		</div>
 		<div class="inner-container">		
 			<div class="cmyk-crosses">
 				<div class="cmyk-crosses__wrapper">
