--- a/pages/production.html
+++ b/pages/production.html
@@ -27,6 +27,13 @@
 		</div>
 	</header>
 	<main>
+		<div class="mobile-nav-menu" ng-show="show_header_menu">
+			<div class="mobile-nav-menu__item" ng-click="go('/what')">What</div>
+			<div class="mobile-nav-menu__item" ng-click="go('/who')">Who</div>
+			<div class="mobile-nav-menu__item" ng-click="go('/how')">How</div>
+			<div class="mobile-nav-menu__item" ng-click="go('/partners')">Partners</div>
+			<div class="mobile-nav-menu__item" ng-click="go('/contact')">Contact</div>
+		</div>
 		<div class="inner-container">
 			<div class="copy copy--light">
 				<h1>Doing</h1>
