add back button on personal pages

--- a/pages/personal.html
+++ b/pages/personal.html
@@ -41,7 +41,12 @@
 					<div class="info-pages__content">
 						<p>{{currentObj.bio}}</p>
 					</div>
-				</div>		
+				</div>	
+				<div class="icons icons--who">
+					<div class="icons__icon" ng-click="go('/who')">
+						<div class="icons__image icons__image--back icons__image--back"></div>
+					</div>
+				</div>	
 				<div class="personal-images">
 					<div style="background-image: url({{currentObj.images[2]}})" class="personal-images__image personal-images__image--1"></div>
 					<div style="background-image: url({{currentObj.images[3]}})" class="personal-images__image personal-images__image--2"></div>
