add vr-app page

--- a/pages/vr-app.html
+++ b/pages/vr-app.html
@@ -36,25 +36,12 @@
 		</div>
 		<div class="inner-container">
 			<div class="copy copy--light">
-				<h1>Virtual Reality Studios</h1>
-				<p>Welcome to VR studios. This is a specific division of TAG that has been established to bring marketing and advertising to life through Virtual Reality.</p>
-				<p>We have all the bases covered. We can work with you to produce mind blowing 360 video content, develop and supply custom branded VR Goggles and create and build a VR smartphone app for your content.</p>
-				<p>Get in touch today; we'd love to help bring your brand to life, truly, from the virtual world!</p>
+				<h1>VRStudio</h1>
+				<p>VRStudio turns your phone into a high definition 360° Video and 360° Photo viewer.</p>
+				<p>Download the app then simply move your iPhone around and watch as it turns into a window to another world! Then for a full VR experience on an iPhone use VRStudio with Google Cardboard or our own VR Headsets [link to goggles page] to immerse yourself in the excitement and innovation of virtual reality.<br>We have built the app using Google powered stereoscopic rendering, head tracking for mobile VR and our own VR 360 platform to ensure the very best quality of 360 and VR content. Download it on the App store here: https://goo.gl/OlX5SZ</p>
 			</div>
 			<div class="media">
-				<div class="videos">
-					<div class="videos__video videos__video--full-width">
-						<div id=vrview></div>
-					</div>
-					<!-- <div class="videos__video videos__video--half-width">
-						<div class="loading-icon loading-icon--yellow"></div>
-						<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
-					</div>
-					<div class="videos__video videos__video--half-width">
-						<div class="loading-icon loading-icon--yellow"></div>
-						<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
-					</div> -->
-				</div>
+				
 			</div>
 			<div class="icons icons--light">
 				<div class="icons__icon" ng-click="go('/doing')">
@@ -67,7 +54,7 @@
 				<div class="icons__icon" ng-click="go('/thinking')">
 					<div class="icons__image icons__image--forward icons__image--forward--light"></div>
 				</div>
-				<div class="icons__icon" ng-click="go('/vr-app')">
+				<div class="icons__icon" ng-click="go('/vr')">
 					<div class="icons__image icons__image--vr"></div>
 				</div>
 				<div class="icons__icon" ng-click="openTab('https://itunes.apple.com/us/app/vrstudio/id1171505347')">
@@ -77,6 +64,5 @@
 			</div>
 		</div>	
 	</main>
-	<script src="../scripts/vr.js"></script>
 </body>
 </html>
