add new VR page

--- a/pages/vr-app.html
+++ b/pages/vr-app.html
@@ -41,7 +41,9 @@
 				<p>Download the app then simply move your iPhone around and watch as it turns into a window to another world! Then for a full VR experience on an iPhone use VRStudio with Google Cardboard or our own VR Headsets [link to goggles page] to immerse yourself in the excitement and innovation of virtual reality.<br>We have built the app using Google powered stereoscopic rendering, head tracking for mobile VR and our own VR 360 platform to ensure the very best quality of 360 and VR content. Download it on the App store here: https://goo.gl/OlX5SZ</p>
 			</div>
 			<div class="media">
-				
+				<img src="../imgs/phone.png">
+				<div class="media__arrow media__arrow--left" ng-click="changeVrImage($event)"></div>
+				<div class="media__arrow media__arrow--right" ng-click="changeVrImage($event)"></div>
 			</div>
 			<div class="icons icons--light">
 				<div class="icons__icon" ng-click="go('/doing')">
