--- a/pages/influencers.html
+++ b/pages/influencers.html
@@ -39,9 +39,10 @@
 				<h1>Influencers</h1>
 				<p>Talking the talk, that’s the game of social media! At TAG The Agency we have a network of influencers that can help to leverage your brand.</p>
 				<p>We work with our influencers to follow the latest trends and to develop campaigns that have a strong impact; we don't just send them products on your behalf and hope they say something about it, we bring our influencers to the development of the campaign, working with them to get the best from their networks by creating content that works.</p>
+				<p>Our current influencers network covers:</p>
 			</div>
 			<div class="media">
-				<div class="influencer-list">
+				<!-- <div class="influencer-list">
 					<h3>Our current influencers network covers:</h3>
 					<ul>
 						<li>Sports</li>
@@ -50,7 +51,7 @@
 						<li>Youth</li>
 						<li>Fashion</li>
 					</ul>
-				</div>
+				</div> -->
 			</div>
 			<div class="icons icons--light">
 				<div class="icons__icon" ng-click="go('/done')">
