--- a/pages/influencers.html
+++ b/pages/influencers.html
@@ -42,16 +42,9 @@
 				<p>Our current influencers network covers:</p>
 			</div>
 			<div class="media">
-				<!-- <div class="influencer-list">
-					<h3>Our current influencers network covers:</h3>
-					<ul>
-						<li>Sports</li>
-						<li>Parenting</li>
-						<li>Automotive</li>
-						<li>Youth</li>
-						<li>Fashion</li>
-					</ul>
-				</div> -->
+				<div class="influencer-list">
+					
+				</div>
 			</div>
 			<div class="icons icons--light">
 				<div class="icons__icon" ng-click="go('/done')">
