add cardboard page

--- a/pages/vr.html
+++ b/pages/vr.html
@@ -70,6 +70,9 @@
 				<div class="icons__icon" ng-click="go('/vr-app')">
 					<div class="icons__image icons__image--vr"></div>
 				</div>
+				<div class="icons__icon" ng-click="go('/vr-cardboard')">
+					<div class="icons__image icons__image--vr-cardboard"></div>
+				</div>
 				<div class="icons__icon" ng-click="openTab('https://itunes.apple.com/us/app/vrstudio/id1171505347')">
 					<div class="icons__image icons__image--app"></div>
 					<div class="icons__text"></div>
