--- a/pages/vr-app.html
+++ b/pages/vr-app.html
@@ -38,12 +38,12 @@
 			<div class="copy copy--light">
 				<h1>VRStudio</h1>
 				<p>VRStudio turns your phone into a high definition 360° Video and 360° Photo viewer.</p>
-				<p>Download the app then simply move your iPhone around and watch as it turns into a window to another world! Then for a full VR experience on an iPhone use VRStudio with Google Cardboard or our own VR Headsets [link to goggles page] to immerse yourself in the excitement and innovation of virtual reality.<br>We have built the app using Google powered stereoscopic rendering, head tracking for mobile VR and our own VR 360 platform to ensure the very best quality of 360 and VR content. Download it on the App store here: https://goo.gl/OlX5SZ</p>
+				<p>Download the app then simply move your iPhone around and watch as it turns into a window to another world! Then for a full VR experience on an iPhone use VRStudio with Google Cardboard or our own VR Headsets to immerse yourself in the excitement and innovation of virtual reality.<br>We have built the app using Google powered stereoscopic rendering, head tracking for mobile VR and our own VR 360 platform to ensure the very best quality of 360 and VR content.</p>
 			</div>
 			<div class="media">
 				<img src="../imgs/phone.png">
-				<div class="media__arrow media__arrow--left" ng-click="changeVrImage($event)"></div>
-				<div class="media__arrow media__arrow--right" ng-click="changeVrImage($event)"></div>
+				<!-- <div class="media__arrow media__arrow--left" ng-click="changeVrImage($event)"></div> -->
+				<!-- <div class="media__arrow media__arrow--right" ng-click="changeVrImage($event)"></div> -->
 			</div>
 			<div class="icons icons--light">
 				<div class="icons__icon" ng-click="go('/doing')">
@@ -56,8 +56,11 @@
 				<div class="icons__icon" ng-click="go('/thinking')">
 					<div class="icons__image icons__image--forward icons__image--forward--light"></div>
 				</div>
-				<div class="icons__icon" ng-click="go('/vr')">
+				<div class="icons__icon" ng-click="go('/vr-app')">
 					<div class="icons__image icons__image--vr"></div>
+				</div>
+				<div class="icons__icon" ng-click="go('/vr-cardboard')">
+					<div class="icons__image icons__image--vr-cardboard"></div>
 				</div>
 				<div class="icons__icon" ng-click="openTab('https://itunes.apple.com/us/app/vrstudio/id1171505347')">
 					<div class="icons__image icons__image--app"></div>
